increased scrollbar width/height to fix problems with grabbing scrollbar

--- a/css/scrollbars.css
+++ b/css/scrollbars.css
@@ -1,6 +1,6 @@
 ::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
+    width: 9px;
+    height: 9px;
 }
 ::-webkit-scrollbar-track {
     background: transparent;
